# 2026_4-1_ai_system

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  RAG_Detailed_Analysis_Report.md  README.md  app.py  rag_analysis_detailed.py  rag_chunking_analysis.py  requirements.txt
data/processed/: documents.jsonl  summary.json
index/baseline/: chunks.jsonl  index.faiss  stats.json
index/llm/: chunks.jsonl
rag_analysis/: basic_rag_feature_names.json  chunking_vectorization_summary.csv  document_vector_statistics.csv  improved_rag_chunks.json  improved_rag_feature_names.json
src/jj_rag/: loaders.py  prompts.py  text_utils.py  types.py
ver2/: .gitignore  IMPLEMENTATION_LOG.md  PIPELINE.md  README.md  pyproject.toml
ver2/data/raw/web/: 학과안내-교수진소개.html  학과안내-인사말.html
ver2/index/llm/: index.faiss  stats.json
ver2/scripts/: build_index.py  collect_data.py
ver2/src/jj_rag/: chunkers.py  config.py  embeddings.py  io_utils.py  llm.py  rag.py  vectorstore.py
ver3/: README.md
ver3/eval/: questions.jsonl
ver3/experiments/: best_details_auto_20260416_045857.jsonl  best_details_manual_20260416_045857.jsonl  questions_auto.jsonl  results_20260416_045857.csv  results_20260416_045857.json  top10_20260416_045857.txt
ver4/: .gitignore  README.md  export_best_worst.sh  requirements.txt  resume_failed.sh  run_all.sh  run_builds.sh  run_eval.sh  run_experiments.sh  run_judge.sh  run_pairwise.sh  use_ys_conda1_env.sh
ver4/configs/: README.md  experiment_matrix.json  experiment_matrix_smoke.json  generation_prompts.yaml  judge_prompts.yaml  scoring_weights.yaml
(+34 files in other folders)
